--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,8 @@ $rosa: #ffb9db;
 $roxo: #9175db;
 $zinza: #f6f6f6;
 $preto: #000000;
+$cinza: #666666;
+$cinza-claro: #eeeeee;
 
 body{
     font-family: 'Manrope', sans-serif;
