--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -36,7 +36,11 @@ header .content__header {
         }
     }
 
-    .header__buy .buy {
+    .header__buy{
+        display: flex;
+    }
+
+    .header__buy .buy, .search{
         margin: 10px;
 
         a {
