--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,7 @@ $zinza: #f6f6f6;
 $preto: #000000;
 $cinza: #666666;
 $cinza-claro: #eeeeee;
+$cinza-claro2: #f6f6f6;
 
 body{
     font-family: 'Manrope', sans-serif;
