--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,1 +1,20 @@
 @import 'src/App.scss';
+
+footer{
+    background-color: $cinza-claro2;
+    bottom: 0;
+    left: 0;
+    position: fixed;
+    width: 100%;
+}
+
+footer .content-footer{
+    display: flex;
+    justify-content: space-between;
+    padding: 0 2%;
+}
+
+footer .content-footer p > i{
+    margin-left: 15px;
+    color: $rosa;
+}
