--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,7 @@ $preto: #000000;
 $cinza: #666666;
 $cinza-claro: #eeeeee;
 $cinza-claro2: #f6f6f6;
+$branco: #ffffff;
 
 body{
     font-family: 'Manrope', sans-serif;
