--- a/src/components/cards/cards.scss
+++ b/src/components/cards/cards.scss
@@ -52,6 +52,14 @@ section {
             width: 100%;
             height: 350px;
             overflow: hidden;
+
+            .img__indisponivel {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                width: 100%;
+                height: 100%;
+            }
         }
 
         .card__title {
@@ -66,6 +74,12 @@ section {
 
             .sub__title {
                 font-weight: 700;
+                margin-right: 15px;
+            }
+
+            #preco {
+                color: $cinza;
+                text-decoration: line-through;
             }
         }
     }
