Creating the logic of opening sections

--- a/src/components/search/search.scss
+++ b/src/components/search/search.scss
@@ -2,8 +2,7 @@
 
 article .content__search{
     position: fixed;
-    // display: flex;
-    display: none;
+    display: flex;
     flex-direction: column;
     background: #fff;
     right: 0px;
