--- a/src/components/cards/cards.scss
+++ b/src/components/cards/cards.scss
@@ -9,8 +9,6 @@ section {
     margin-bottom: 60px;
 }
 
-
-
 .content__cards {
     display: flex;
     flex-direction: column;
@@ -67,13 +65,17 @@ section {
             height: 350px;
             overflow: hidden;
 
-            .img__indisponivel {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                width: 100%;
-                height: 100%;
-                color: $cinza;
+            a {
+                text-decoration: none;
+
+                .img__indisponivel {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    width: 100%;
+                    height: 100%;
+                    color: $cinza;
+                }
             }
         }
 
