size fileds selected

--- a/src/containers/product/product.scss
+++ b/src/containers/product/product.scss
@@ -24,6 +24,9 @@ section.content__product {
         .product__installments{
             color: $cinza;
         }
+        .product__message{
+            color: $cinza;
+        }
         
         .product__btn {
             &--size {
