--- a/src/components/bag/bag.scss
+++ b/src/components/bag/bag.scss
@@ -7,7 +7,7 @@ article .content__bag {
     background: #fff;
     right: 0px;
     top: 0px;
-    width: 347px;
+    width: 363px;
     height: 100%;
     z-index: 1;
     padding: 1% 2%;
@@ -38,17 +38,97 @@ article .content__bag {
         }
     }
     .bag__content {
+        overflow-y: scroll;
+
+        .bag__content--item {
+            display: flex;
+            justify-content: space-between;
+            border-bottom: 1px solid $cinza-claro;
+
+            .item__img {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                margin: 10px;
+                width: 30%;
+
+                img{
+                    width: 100%;
+                    height: 100px;
+                    border-radius: 15px;
+                }
+                button {
+                    background-color: #000000;
+                    border-radius: 0.9rem;
+                    border: none;
+                    color: #ffffff;
+                    display: inline-block;
+                    line-height: 1;
+                    cursor: pointer;
+                    transform: translateZ(0);
+                    width: 100px;
+                    font-weight: 600;
+                    padding: 3px 5px;
+                    margin-top: 5px;
+                }
+            }
+            .item__desc {
+                display: flex;
+                flex-direction: column;
+                margin: 10px;
+
+                p {
+                    font-weight: 600;
+                }
+                small {
+                    color: $cinza;
+                }
+
+                .item__desc--qtd {
+                    display: flex;
+                    justify-content: space-evenly;
+                    align-items: center;
+
+                    button {
+                        cursor: pointer;
+                        font-weight: 600;
+                        padding: 5px 10px;
+                        border: 0.05rem solid #dfdfdf;
+                        background: transparent;
+                        outline: none;
+                        border-radius: 0.5rem;
+                        font-size: 0.85em;
+                    }
+                }
+            }
+            .item__preco {
+                display: flex;
+                flex-direction: column;
+                margin: 10px;
+
+                p {
+                    font-weight: 600;
+                }
+                small {
+                    color: $cinza;
+                }
+            }
+        }
         .bag__content--not {
             display: flex;
             justify-content: center;
             color: $cinza;
         }
     }
-    .bag__footer{
+    .bag__footer {
+        background: $branco;
         position: fixed;
         bottom: 0px;
+        width: 20%;
+        padding: 0px 25px;
+        right: 0px;
 
-        .bag__content--title{
+        .bag__content--title {
             font-weight: 500;
         }
     }
