--- a/src/components/search/search.scss
+++ b/src/components/search/search.scss
@@ -50,6 +50,69 @@ article .content__search {
         }
     }
     .search__content {
+        overflow-y: scroll;
+
+        .search__content--item {
+            display: flex;
+            justify-content: space-between;
+            border-bottom: 1px solid $cinza-claro;
+
+            .item__img {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                margin: 10px;
+                width: 30%;
+
+                img{
+                    width: 100%;
+                    height: 100px;
+                    border-radius: 15px;
+                }
+                button {
+                    background-color: #000000;
+                    border-radius: 0.9rem;
+                    border: none;
+                    color: #ffffff;
+                    display: inline-block;
+                    line-height: 1;
+                    cursor: pointer;
+                    transform: translateZ(0);
+                    width: 100px;
+                    font-weight: 600;
+                    padding: 3px 5px;
+                    margin-top: 5px;
+                }
+            }
+            .item__desc {
+                display: flex;
+                flex-direction: column;
+                margin: 10px;
+
+                p {
+                    font-weight: 600;
+                }
+                .item__desc--content{
+                    display: flex;
+                    small {
+                        color: $cinza;
+                        padding-right: 5px;
+                    }
+                }
+            }
+            .item__preco {
+                display: flex;
+                flex-direction: column;
+                margin: 10px;
+
+                p {
+                    font-weight: 600;
+                }
+                small {
+                    color: $cinza;
+                }
+            }
+        }
         .search__content--not {
             display: flex;
             justify-content: center;
